# ya.camp.2025-clearml

./: .gitignore  .gitmodules  .nojekyll  1. yandex_kube.html  1. yandex_kube.md  2. clearml_yandex_kube.html  2. clearml_yandex_kube.md  2.2 clearml docker.html  2.2 clearml docker.md  3. clearml_work.html  3. clearml_work.md  4. clearml data.md  4. clearml_data.html  5. clearml pipeline.md  5. clearml_pipeline.html  5. clearml_pipeline.md  6. clearml_research.html  6. clearml_research.md  7. clearml_reports.html  7. clearml_reports.md  8. clearml_serving.html  8. clearml_serving.md  9. clearml_extend_pipes.html  9. clearml_extend_pipes.md  README.html  README.md  _quarto.yml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
docker/: docker-compose.yaml
docker/clearml_config/: apiserver.conf
mlops-example/: 1.upload_dataset.ipynb  2.preprocessing_dataset.ipynb  2.train_test_split.py  3.tf_idf.py  3.tf_idf_refactor.ipynb  5.full_pipe.py  bert_amazon.ipynb  pyproject.toml
mlops-example/data/: .gitignore
mlops-example/data/raw/: .gitignore
mlops-example/mlops_example/: __main__.py  cli.py  model.py  preprocessing.py  vectorize.py  visualisation.py
mlops-example/src/mlops_example/: __init__.py
mlops-example/src/mlops_example/pipeline/: train_test_split.py
site_libs/bootstrap/: bootstrap-07ee6638e08fdc3a64acc6d50e892ea0.min.css  bootstrap-0f5834b0513b39b43aed365d53fdc881.min.css  (+1 more)
slides/: 1.intro.html  1.intro.qmd  2.tools.html  2.tools.qmd  3.clearml.html  3.clearml.qmd  4.k8s.html  4.k8s.qmd
