[project]
name = "mlops-example"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "clearml>=2.0.1,<3", "jupyter>=1.1.1,<2", "scikit-learn>=1.7.0,<2", "polars>=1.31.0,<2", "pandas>=2.3.0,<3", "torch>=2.7.1,<3", "transformers>=4.53.0,<5", "nltk>=3.9.1,<4", "pyarrow>=20.0.0,<21"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mlops_example = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
